Package_Tools/include-C/efl/fertig/eina-1/eina/inarbeit/fertig/eina_hash.h


typedef struct _Eina_Hash       Eina_Hash;
typedef unsigned int (*Eina_Key_Length)(const void *key);
#define EINA_KEY_LENGTH(Function) ((Eina_Key_Length)Function)
typedef int          (*Eina_Key_Cmp)(const void *key1, int key1_length, const void *key2, int key2_length);
#define EINA_KEY_CMP(Function)    ((Eina_Key_Cmp)Function)
typedef int          (*Eina_Key_Hash)(const void *key, int key_length);
#define EINA_KEY_HASH(Function)   ((Eina_Key_Hash)Function)
typedef Eina_Bool    (*Eina_Hash_Foreach)(const Eina_Hash *hash, const void *key, void *data, void *fdata);
extern Eina_Hash *eina_hash_new(Eina_Key_Length key_length_cb,
                              Eina_Key_Cmp    key_cmp_cb,
                              Eina_Key_Hash   key_hash_cb,
                              Eina_Free_Cb    data_free_cb,
                              int             buckets_power_size)   ;
extern void eina_hash_free_cb_set(Eina_Hash *hash, Eina_Free_Cb data_free_cb) ;
extern Eina_Hash *eina_hash_string_djb2_new(Eina_Free_Cb data_free_cb);
extern Eina_Hash *eina_hash_string_superfast_new(Eina_Free_Cb data_free_cb);
extern Eina_Hash *eina_hash_string_small_new(Eina_Free_Cb data_free_cb);
extern Eina_Hash *eina_hash_int32_new(Eina_Free_Cb data_free_cb);
extern Eina_Hash *eina_hash_int64_new(Eina_Free_Cb data_free_cb);
extern Eina_Hash *eina_hash_pointer_new(Eina_Free_Cb data_free_cb);
extern Eina_Hash *eina_hash_stringshared_new(Eina_Free_Cb data_free_cb);
extern Eina_Bool  eina_hash_add(Eina_Hash  *hash,
                              const void *key,
                              const void *data) ;
extern Eina_Bool eina_hash_direct_add(Eina_Hash  *hash,
                                    const void *key,
                                    const void *data) ;
extern Eina_Bool eina_hash_del(Eina_Hash  *hash,
                             const void *key,
                             const void *data) ;
extern void *eina_hash_find(const Eina_Hash *hash,
                          const void      *key) ;
extern void *eina_hash_modify(Eina_Hash  *hash,
                            const void *key,
                            const void *data) ;
extern void *eina_hash_set(Eina_Hash  *hash,
                         const void *key,
                         const void *data) ;
extern Eina_Bool eina_hash_move(Eina_Hash  *hash,
                              const void *old_key,
                              const void *new_key) ;
extern void      eina_hash_free(Eina_Hash *hash) ;
extern void      eina_hash_free_buckets(Eina_Hash *hash) ;
extern int       eina_hash_population(const Eina_Hash *hash) ;
extern Eina_Bool eina_hash_add_by_hash(Eina_Hash  *hash,
                                     const void *key,
                                     int         key_length,
                                     int         key_hash,
                                     const void *data) ;
extern Eina_Bool eina_hash_direct_add_by_hash(Eina_Hash  *hash,
                                            const void *key,
                                            int         key_length,
                                            int         key_hash,
                                            const void *data) ;
extern Eina_Bool eina_hash_del_by_key_hash(Eina_Hash  *hash,
                                         const void *key,
                                         int         key_length,
                                         int         key_hash) ;
extern Eina_Bool eina_hash_del_by_key(Eina_Hash  *hash,
                                    const void *key) ;
extern Eina_Bool eina_hash_del_by_data(Eina_Hash  *hash,
                                     const void *data) ;
extern Eina_Bool eina_hash_del_by_hash(Eina_Hash  *hash,
                                     const void *key,
                                     int         key_length,
                                     int         key_hash,
                                     const void *data) ;
extern void *eina_hash_find_by_hash(const Eina_Hash *hash,
                                  const void      *key,
                                  int              key_length,
                                  int              key_hash) ;
extern void *eina_hash_modify_by_hash(Eina_Hash  *hash,
                                    const void *key,
                                    int         key_length,
                                    int         key_hash,
                                    const void *data) ;
extern Eina_Iterator *eina_hash_iterator_key_new(const Eina_Hash *hash)   ;
extern Eina_Iterator *eina_hash_iterator_data_new(const Eina_Hash *hash)   ;
extern Eina_Iterator *eina_hash_iterator_tuple_new(const Eina_Hash *hash)   ;
extern void           eina_hash_foreach(const Eina_Hash  *hash,
                                      Eina_Hash_Foreach func,
                                      const void       *fdata) ;
extern void eina_hash_list_append(Eina_Hash *hash, const void *key, const void *data) ;
extern void eina_hash_list_direct_append(Eina_Hash *hash, const void *key, const void *data) ;
extern void eina_hash_list_prepend(Eina_Hash *hash, const void *key, const void *data) ;
extern void eina_hash_list_direct_prepend(Eina_Hash *hash, const void *key, const void *data) ;
extern void eina_hash_list_remove(Eina_Hash *hash, const void *key, const void *data) ;
extern int eina_hash_superfast(const char *key,
                             int         len) ;